# cars_control

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  postman_collection.json  pyproject.toml
apps/all_cars/dropout_cars/: models.py  serializers.py
apps/all_cars/listings/: managers.py  models.py  serializers.py  services.py  urls.py  views.py
apps/all_users/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
apps/all_users/admins/: urls.py  views.py
apps/all_users/auth/: serializers.py  urls.py  views.py
apps/all_users/users/: choices.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/analytics/: urls.py  views.py
apps/listings/: choices.py  filters.py  managers.py  models.py  regex.py  serializers.py  services.py  urls.py  views.py
apps/listings/choices/: body_type_choice.py  currency_choice.py  eco_choice.py  engine_choice.py  (+2 more)
apps/payments/: models.py
apps/users/: choices.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/: setup.cfg
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: brand_not.html  rate_currency.html  recovery_password.html  spam.html  test.html
client/: index.html
configs/: settings.py  urls.py
configs/extra_conf/: mail_conf.py  rest_conf.py
core/dataclasses/: user_dataclass.py
core/handlers/: error_handler.py
core/services/: email_service.py  jwt_service.py
templates/: base.html  checking_ad.html  register.html
(+144 files in other folders)
